; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_bench.c_LZ4_compressResetStreamHC.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_bench.c_LZ4_compressResetStreamHC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compressionParameters = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.compressionParameters*)* @LZ4_compressResetStreamHC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LZ4_compressResetStreamHC(%struct.compressionParameters* %0) #0 {
  %2 = alloca %struct.compressionParameters*, align 8
  store %struct.compressionParameters* %0, %struct.compressionParameters** %2, align 8
  %3 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %4 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %7 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @LZ4_resetStreamHC_fast(i32 %5, i32 %8)
  %10 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %11 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %14 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @LZ4_attach_HC_dictionary(i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @LZ4_resetStreamHC_fast(i32, i32) #1

declare dso_local i32 @LZ4_attach_HC_dictionary(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
